@@ -107,8 +107,8 @@
     portal_type="Text Portlet"/>
  <object name="portlet_text_powered_by" meta_type="CPS Portlet"
     portal_type="Text Portlet"/>
- <object name="portlet_text_start_cps" meta_type="CPS Portlet"
-    portal_type="Text Portlet"/>
+ <object name="portlet_custom_start_cps" meta_type="CPS Portlet"
+    portal_type="Custom Portlet"/>
  <object name="portlet_text_welcome" meta_type="CPS Portlet"
     portal_type="Text Portlet"/>
  <object name="portlet_text_welcome2" meta_type="CPS Portlet"
