@@ -1,52 +1,0 @@
-<?xml version="1.0"?>
-<object name="portlet_text_start_cps" meta_type="CPS Portlet"
-   portal_type="Text Portlet">
- <f id="Contributors">
-  <e v="CPS Manager Manager"/>
- </f>
- <f id="Coverage" v=""/>
- <f id="CreationDate" v="20060123161500Z"/>
- <f id="Creator" v="manager"/>
- <f id="Description" v=""/>
- <f id="EffectiveDate" v=""/>
- <f id="ExpirationDate" v=""/>
- <f id="Format" v="text/html"/>
- <f id="Language" v=""/>
- <f id="ModificationDate" v="20060123224718Z"/>
- <f id="Relation" v=""/>
- <f id="Rights" v=""/>
- <f id="Source" v=""/>
- <f id="Subject"/>
- <f id="Title" v=""/>
- <f id="allow_discussion" v="False"/>
- <f id="cache_cleanup_date" v="1138056438.31"/>
- <f id="cache_params"/>
- <f id="cache_timeout" v="0"/>
- <f id="disable_override" v="0"/>
- <f id="i18n" v="0"/>
- <f id="identifier" v="portlet_text_start_cps"/>
- <f id="javascript" v=""/>
- <f id="order" v="0"/>
- <f id="portlet" v=""/>
- <f id="preview"/>
- <f id="provider" v=""/>
- <f id="slot" v=""/>
- <f id="slot_override" v="0"/>
- <f
-    id="text">&lt;div style="padding:0px 10px 10px 10px"&gt;
-
-&lt;h1&gt;Start CPS&lt;/h1&gt;
-&lt;img src="cpsskins_images/pict2.png" alt="" style="float:left;padding:0px 5px 0px 0px;"/&gt;
-&lt;p style="vertical-align:middle;"&gt;
-&lt;a href="login_form"&gt;Log in&lt;/a&gt;
-&lt;br /&gt;
-&lt;a href="register"&gt;Join&lt;/a&gt;
-&lt;br /&gt;
-&lt;a href="email"&gt;Contact&lt;/a&gt;
-&lt;/p&gt;
-
-&lt;/div&gt;</f>
- <f id="text_format" v="normal"/>
- <f id="text_position" v="html"/>
- <f id="visibility_range" v="0-0"/>
-</object>
