@@ -24,7 +24,7 @@
  <property name="boxcorners">RoundedBoxCorners</property>
  <property name="portaltabstyle"></property>
  <property name="boxlayout">rounded_box_notitle</property>
- <property name="portlet_id">portlet_text_start_cps</property>
- <property name="portlet_type">Text Portlet</property>
+ <property name="portlet_id">portlet_custom_start_cps</property>
+ <property name="portlet_type">Custom Portlet</property>
  <property name="box_title_i18n">False</property>
 </object>
