@@ -1,0 +1,11 @@
+<div style="padding:0px 10px 10px 10px">
+  <h1>Start CPS</h1>
+  <img src="cpsskins_images/pict2.png" alt="" style="float:left;padding:0px 5px 0px 0px;"/>
+  <p style="vertical-align:middle;">
+    <a href="login_form">Log in</a>
+    <br />
+    <a href="register">Join</a>
+    <br />
+    <a href="email">Contact</a>
+  </p>
+</div>
