@@ -37,3 +37,5 @@ New internal features:
 - #1403: Byline macro will show only the creator/date in workspaces
 - Extension profile test layer class bugfix: was not logged in as manager to
   run import steps.
+- Start CPS is now a custom portlet, in order to dinamically show the links 
+  inside
